Scripts/weather-api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-api
  labels:
    app: weather-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-api
  template:
    metadata:
      labels:
        app: weather-api
    spec:
      containers:
      - name: weather-api
        image: ghcr.io/neonkube-dev/weather-api:neonkube-0.3.0-alpha 
        ports:
          - name: http-web
            containerPort: 80
            protocol: TCP
          - name: http-metrics
            containerPort: 9762
            protocol: TCP
        livenessProbe:
          exec:
            command:
              - /health-check
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          exec:
            command:
              - /ready-check
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        startupProbe:
          exec:
            command:
              - /health-check
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 30
