Scripts/weather-api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weather-api
  labels:
    app: weather-api
spec:
  selector:
    app: weather-api
  ports:
    - name: http-web
      protocol: TCP
      port: 80
      targetPort: 80
    - name: http-metrics
      protocol: TCP
      port: 9762
      targetPort: 9762
