Scripts/weather-api/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weather-api
spec:
  gateways:
    - neon-ingress/neoncluster-gateway
  hosts:
    - weather-api.c437bbc593d8d4da.neoncluster.io
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: weather-api.default.svc.cluster.local
            port:
              number: 80
